--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-
-body {
+body{
   font-family: "Montserrat";
   text-align: center;
 }
@@ -85,7 +84,7 @@ p {
 
 .title-image {
   width: 60%;
-  transform: rotate(??deg);
+  transform: rotate(25deg);
   position: absolute;
   right: 30%;
 }
@@ -102,6 +101,7 @@ p {
 
 .feature-box {
   padding: 4.5%;
+
 }
 
 .icon {
